Release notes
=============

master
------

Incompatibilities:

 - Remove support for the deprecated TIG_{MAIN,DIFF,LOG,TREE,BLOB}_CMD
   environment variables.

Improvements:

 - Naïvely color blame IDs to distinguish lines.
 - Add support for blaming diff lines.
 - Add diff-context option and bindings to increase the diff context in
   the diff and stage view.
 - (GH-6) Make blame configurable via extra options passed from the command
   line and blame-options setting from ~/.tigrc. For example:
   
   	set blame-options = -C -C -C

Bug fixes:

 - Fix segfault when sorting the branch view by author.
 - Expand %(directory) to . for the root directory. (GH-3)
 - Accept 'utf-8' for the line-graphics option as indicated in the docs.
 - Use erasechar() to check for the correct backspace character.

tig-0.17
--------

Improvements:

 - Start rewrite of the revision graph renderer. Three modes are
   supported UTF-8, ncurses line graphics, and ASCII. Also, enable
   revision graph rendering by default.

Bug fixes:

 - Fix ncurses 5.8 issue by passing non-zero column size to newwin().
 - Fix opening of diffs when browsing branches.

tig-0.16.2
----------

Bug fixes:

 - Fix regression causing empty tree view.
 - Fix set_tabsize() compile error for older versions of ncurses.

tig-0.16.1
----------

Improvements:

 - Add scroll-first-col action to jump to the first column. Bound to '|'
   by default.
 - Add 'status-untracked-dirs' option to ignore unknown directories
   contents in the status view. On by default.

Bug fixes:

 - Fix 'tig show <commit>' to show the provided commit.
 - Fix problem with empty diff views when file specs were passed on the
   command line.
 - Fix segfault when starting tig in pager mode.

tig-0.16
--------

Incompatibilities:

 - Encode everything internally as UTF-8. This can affect performance,
   but should in general improve handling of character lengths etc.
   Also, to properly handle UTF-8 environments use ncurses with wide